--- a/package.xml
+++ b/package.xml
@@ -1,41 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package name="eu.hanashi.discord-sync-trophy" xmlns="https://www.woltlab.com" xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://www.woltlab.com https://www.woltlab.com/XSD/vortex/package.xsd">
-    <packageinformation>
-        <packagename><![CDATA[Discord Sync (Trophy)]]></packagename>
-        <packagename language="de"><![CDATA[Discord-Sync (Trophäe)]]></packagename>
-        <packagedescription><![CDATA[Adds trophy dependency for discord synchronization.]]></packagedescription>
-        <packagedescription language="de"><![CDATA[Ergänzt Trophäen-Abhängigkeit für Discord-Synchronisation.]]></packagedescription>
-        <version>1.1.0</version>
-        <date>2020-05-27</date>
-    </packageinformation>
-
-    <authorinformation>
-        <author><![CDATA[Hanashi]]></author>
-        <authorurl><![CDATA[https://hanashi.eu/]]></authorurl>
-    </authorinformation>
-
-    <requiredpackages>
-        <requiredpackage minversion="3.1.0">com.woltlab.wcf</requiredpackage>
-        <requiredpackage minversion="1.0.0 Alpha 1">eu.hanashi.discord-sync</requiredpackage>
-    </requiredpackages>
-
-    <excludedpackages>
-        <excludedpackage version="6.0.0 Alpha 1">com.woltlab.wcf</excludedpackage>
-    </excludedpackages>
-
-    <instructions type="install">
-		<!-- language -->
-        <instruction type="language"/>
-		
-		<!-- config -->
-        <instruction type="objectType" />
-    </instructions>
-	
-	<instructions type="update" fromversion="1.0.1">
-		<!-- language -->
-        <instruction type="language"/>
-		
-		<!-- config -->
-        <instruction type="objectType" />
+<package xmlns="http://www.woltlab.com" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.woltlab.com http://www.woltlab.com/XSD/5.4/package.xsd" name="eu.hanashi.discord-sync-trophy">
+	<packageinformation>
+		<!-- eu.hanashi.discord-sync-trophy -->
+		<packagename>Discord Sync (Trophy)</packagename>
+		<packagename language="de">Discord-Sync (Trophäe)</packagename>
+		<packagedescription>Adds trophy dependency for discord synchronization.</packagedescription>
+		<packagedescription language="de">Ergänzt Trophäen-Abhängigkeit für Discord-Synchronisation.</packagedescription>
+		<version>1.2.0</version>
+		<date>2023-10-19</date>
+	</packageinformation>
+	<authorinformation>
+		<author>Hanashi Development</author>
+		<authorurl>https://hanashi.dev/</authorurl>
+	</authorinformation>
+	<requiredpackages>
+		<requiredpackage minversion="6.0.0">com.woltlab.wcf</requiredpackage>
+		<requiredpackage minversion="1.2.1">eu.hanashi.discord-sync</requiredpackage>
+	</requiredpackages>
+	<excludedpackages>
+		<excludedpackage version="6.1.0 Alpha 1">com.woltlab.wcf</excludedpackage>
+	</excludedpackages>
+	<instructions type="install">
+		<instruction type="language"/>
+		<instruction type="objectType"/>
+	</instructions>
+	<instructions type="update" fromversion="1.1.*">
+		<void/>
 	</instructions>
 </package>
