--- a/package.xml
+++ b/package.xml
@@ -6,16 +6,16 @@
 		<packagename language="de">Discord-Sync (Trophäe)</packagename>
 		<packagedescription>Adds trophy dependency for discord synchronization.</packagedescription>
 		<packagedescription language="de">Ergänzt Trophäen-Abhängigkeit für Discord-Synchronisation.</packagedescription>
-		<version>1.2.1</version>
-		<date>2023-10-20</date>
+		<version>1.3.0</version>
+		<date>2024-10-22</date>
 	</packageinformation>
 	<authorinformation>
 		<author>Hanashi Development</author>
 		<authorurl>https://hanashi.dev/</authorurl>
 	</authorinformation>
 	<requiredpackages>
-		<requiredpackage minversion="5.5.18">com.woltlab.wcf</requiredpackage>
-		<requiredpackage minversion="1.1.8">eu.hanashi.discord-sync</requiredpackage>
+		<requiredpackage minversion="6.1.0 RC 1">com.woltlab.wcf</requiredpackage>
+		<requiredpackage minversion="1.3.1">eu.hanashi.discord-sync</requiredpackage>
 	</requiredpackages>
 	<excludedpackages>
 		<excludedpackage version="6.1.0 Alpha 1">com.woltlab.wcf</excludedpackage>
@@ -24,10 +24,7 @@
 		<instruction type="language"/>
 		<instruction type="objectType"/>
 	</instructions>
-	<instructions type="update" fromversion="1.2.1">
-		<void/>
-	</instructions>
-	<instructions type="update" fromversion="1.1.*">
+	<instructions type="update" fromversion="1.2.*">
 		<void/>
 	</instructions>
 </package>
